WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206608
REGRESSION (
r253519
): [WKWebView evaluateJavaScript:completionHandler:] gives a non-nil, non-Error result even when JavaScript cannot be evaluated
https://bugs.webkit.org/show_bug.cgi?id=206608
Summary
REGRESSION (r253519): [WKWebView evaluateJavaScript:completionHandler:] gives...
Brady Eidson
Reported
2020-01-22 12:24:49 PST
REGRESSION (
r253519
): [WKWebView evaluateJavaScript:completionHandler:] gives a non-nil, non-Error result even when JavaScript cannot be evaluated <
rdar://problem/58544942
>
Attachments
Patch
(4.41 KB, patch)
2020-01-22 12:39 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2020-01-22 12:39:49 PST
Created
attachment 388459
[details]
Patch
Alex Christensen
Comment 2
2020-01-22 13:00:37 PST
Comment on
attachment 388459
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=388459&action=review
> Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm:235 > + TCPServer server([](int socket) {
You could've used HTTPServer since this only adds headers fields and body, but this is fine too.
WebKit Commit Bot
Comment 3
2020-01-22 15:48:35 PST
Comment on
attachment 388459
[details]
Patch Clearing flags on attachment: 388459 Committed
r254950
: <
https://trac.webkit.org/changeset/254950
>
WebKit Commit Bot
Comment 4
2020-01-22 15:48:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug