Cherry-pick r254950. rdar://problem/58544942

REGRESSION (r253519): [WKWebView evaluateJavaScript:completionHandler:] gives a non-nil, non-Error result even when JavaScript cannot be evaluated
    <rdar://problem/58544942> and https://bugs.webkit.org/show_bug.cgi?id=206608

    Reviewed by Alex Christensen.

    Source/WebCore:

    Covered by new API test.

    * bindings/js/ScriptController.cpp:
    (WebCore::ScriptController::executeScriptInWorld): Address a FIXME added in 253519 which had predicted this problem.

    Tools:

    * TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm:
    (TEST):

    Canonical link: https://commits.webkit.org/219666@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254950 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/219244.76@safari-610.1.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.1-branch@255640 268f45cc-cd09-0410-ab3c-d52691b4dbfc